Release version 2.5.0 1. Updated all desktop styles to accentuate the glassmorphism design (and related changes) 2. Fixed chat-input-field width problems when showToc is false 3. Changed style of loading-overlay-dots 4. Added ellipses back to loading-overlay h2 5. Added feature so that users can set showToc to false even if showIframe is false (only on sources where iframes are supported) (and related changes) 6. Changed style of download liked articles button on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -56,14 +56,15 @@ body.custom-cursor-enabled
   font-size: large;
   color: white;
   opacity: 1;
-  border: none;
   cursor: pointer;
   background: rgba(var(--bg-color), 0.6);
   border-radius: 12px;
   padding: 8px 25px;
-  backdrop-filter: blur(2.5px);
-  -webkit-backdrop-filter: blur(2.5px);
   transition: all 0.1s linear;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 32px rgba(var(--bg-color), 0.25);
+  backdrop-filter: blur(1px) saturate(1.5);
+  -webkit-backdrop-filter: blur(1px) saturate(1.5);
 }
 
 .install-button button:hover {
