--- a/src/components/Articles/Articles-mobile.css
+++ b/src/components/Articles/Articles-mobile.css
@@ -153,9 +153,14 @@
     background-color: rgba(var(--bg-color), 0.5);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.125);
+    box-shadow: none;
     font-size: 0.85rem;
     text-align: center;
     z-index: 600;
+  }
+
+  .view-count:hover {
+    border: 1px solid rgba(255, 255, 255, 0.125);
   }
 
   .last-edited {
@@ -167,8 +172,13 @@
     background-color: rgba(var(--bg-color), 0.5);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.125);
+    box-shadow: none;
     font-size: 0.85rem;
     z-index: 600;
+  }
+
+  .last-edited:hover {
+    border: 1px solid rgba(255, 255, 255, 0.125);
   }
 
   .search-text {
@@ -176,6 +186,7 @@
   }
 
   .search {
+    border: none;
     background: none;
     box-shadow: none;
     border-radius: 0;
@@ -258,6 +269,7 @@
   }
 
   .article-link {
+    border: none;
     box-shadow: none;
     top: calc(84% - 75px);
     right: 0;
@@ -274,6 +286,7 @@
 
   .article-link:hover {
     background: rgba(var(--bg-color), 0.65);
+    border: none;
   }
 
   .article-link > * {
