--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -106,7 +106,7 @@
   bottom: 12px;
   left: 8.5px;
   height: 55.75px;
-  width: 88.55%;
+  width: 87.85%;
   padding: 0 46.7px 0 11.5px;
   background-color: rgba(var(--bg-color), 0.7);
   border: 3.5px solid transparent;
