--- a/src/components/Header/Header-mobile.css
+++ b/src/components/Header/Header-mobile.css
@@ -33,7 +33,7 @@
     gap: 10px;
     backdrop-filter: blur(7px) saturate(200%);
     -webkit-backdrop-filter: blur(7px) saturate(200%);
-    background-color: rgba(var(--bg-color), 0.7);
+    background: rgba(var(--bg-color), 0.7);
     border-radius: 20px;
     border: 1px solid rgba(var(--bg-color), 0.125);
     z-index: 7000;
@@ -258,9 +258,9 @@
 
   .download-liked-articles-button {
     font-size: 1rem;
-    border-radius: 20px;
+    border-radius: 15px;
     background-color: rgba(var(--bg-color), 1);
-    border: 1px solid rgba(var(--bg-color), 1);
+    border: 0.5px solid rgba(255, 255, 255, 0.15);
   }
 
   .no-liked-articles-text h2 {
