--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 header {
   background: rgba(var(--bg-color), 0.25);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
+  border-bottom: 0.5px solid rgba(255, 255, 255, 0.2);
   height: 50px;
   padding: 10px;
   color: white;
@@ -80,7 +79,7 @@ header {
   top: 60px;
   left: -1px;
   width: 500px;
-  background: rgba(var(--bg-color), 0.9);
+  background: rgba(var(--bg-color), 0.8);
   clip-path: inset(0 round 10px);
   padding: 15px;
   overflow-x: hidden;
@@ -91,6 +90,9 @@ header {
   animation-duration: 300ms;
   animation-fill-mode: forwards;
   will-change: height, opacity, transform;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(1px) saturate(1.5);
+  -webkit-backdrop-filter: blur(1px) saturate(1.5);
 }
 
 .list-box-container::-webkit-scrollbar {
@@ -255,7 +257,7 @@ header {
   background-color: rgba(var(--bg-color), 1);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  border: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 10px;
   color: white;
   outline: none;
@@ -308,7 +310,7 @@ header {
 }
 
 .color-input-manual:focus {
-  border: 3px solid rgba(var(--bg-color), 1);
+  border: 3px solid rgba(255, 255, 255, 0.3);
 }
 
 .reset-bgcolor-button {
@@ -403,7 +405,7 @@ header {
   background: rgba(var(--bg-color), 0.05);
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);
-  border: none;
+  border: 0.1px solid rgba(255, 255, 255, 0.2);
   border-radius: 5px;
   cursor: pointer;
   color: white;
